--- a/src/app/map/components/header/header.component.scss
+++ b/src/app/map/components/header/header.component.scss
@@ -4,7 +4,7 @@
   line-height: 40px;
   height: 40px;
   padding: 0;
-  background-color: #1ca1f2;
+  background-color: rgba(28,161,242,1);
   color: #fff;
 }
 
