--- a/src/app/map/components/search/search.component.html
+++ b/src/app/map/components/search/search.component.html
@@ -2,5 +2,5 @@
   <mat-form-field>
     <input matInput placeholder="keyword" (input)="handleKeywordInput($event)" [value]="keyword">
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="handleSerchButtonClick()">Search </button>
+  <button mat-raised-button color="primary" (click)="handleSerchButtonClick()" [disabled]="isDisabled">Search </button>
 </div>
