--- a/src/app/map/map.container.html
+++ b/src/app/map/map.container.html
@@ -1,9 +1,20 @@
-<app-header class="header" [idDisplay]="mobileQuery.matches" (menuClick)="handleMenuClick()"></app-header>
+<app-header
+  class="header"
+  [idDisplay]="mobileQuery.matches"
+  (menuClick)="handleMenuClick()"
+></app-header>
 
 <mat-sidenav-container class="app">
-  <mat-sidenav class="tweet" #sidenav [mode]="mobileQuery.matches ? 'over' : 'side'" [opened]="!mobileQuery.matches"
-    [autoFocus]="false" [fixedInViewport]="mobileQuery.matches" [class.tweet-mobile]="mobileQuery.matches">
     <app-search [keyword]="keyword" (searchButtonClick)="handleSearchButtonClick($event)" class="search"></app-search>
+  <mat-sidenav
+    class="tweet"
+    #sidenav
+    [mode]="mobileQuery.matches ? 'over' : 'side'"
+    [opened]="!mobileQuery.matches"
+    [autoFocus]="false"
+    [fixedInViewport]="mobileQuery.matches"
+    [class.tweet-mobile]="mobileQuery.matches"
+  >
     <app-tweets [tweets]="tweets" (tweetClick)="handleTweetClick($event)"></app-tweets>
   </mat-sidenav>
 
