検索フォームをヘッダー下に移動

--- a/src/app/map/components/search/search.component.html
+++ b/src/app/map/components/search/search.component.html
@@ -7,6 +7,7 @@
     color="primary"
     (click)="handleSerchButtonClick()"
     [disabled]="isDisabled"
+    class="button"
   >
     Search Tweet
   </button>
