--- a/src/app/map/components/search/search.component.scss
+++ b/src/app/map/components/search/search.component.scss
@@ -1,5 +1,10 @@
 .search {
   width: 100%;
-  padding: 16px 16px 0;
-  background-color: rgba(28,161,242,0.1);
+  padding: 6px 16px 0;
+  background-color: rgba(28, 161, 242, 0.1);
+  text-align: center;
+}
+
+.button {
+  margin-left: 8px;
 }
