--- a/src/app/map/components/tweets/tweets.component.scss
+++ b/src/app/map/components/tweets/tweets.component.scss
@@ -29,3 +29,32 @@
   background-color: rgba(236, 64, 122, 0.2);
   cursor: pointer;
 }
+
+.no-tweets {
+  padding: 16px;
+
+  h2 {
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  p {
+    margin-top: 0;
+    text-align: center;
+    font-size: 14px;
+    color: #666;
+  }
+}
+
+.about {
+  h3 {
+    margin: 80px auto 8px;
+    text-align: center;
+  }
+
+  ul {
+    margin-top: 0;
+    text-align: justify;
+    padding-left: 16px;
+  }
+}
