--- a/src/app/map/components/search/search.component.scss
+++ b/src/app/map/components/search/search.component.scss
@@ -3,6 +3,7 @@
   padding: 6px 16px 0;
   background-color: rgba(28, 161, 242, 0.1);
   text-align: center;
+  box-sizing: border-box;
 }
 
 .button {
