header対応（レイアウト修正 & タイトルにリンク追加）

--- a/src/app/map/components/header/header.component.html
+++ b/src/app/map/components/header/header.component.html
@@ -1,6 +1,9 @@
-<mat-toolbar class="header">
-  <button *ngIf="idDisplay" class="icon" mat-icon-button (click)="handleMenuClick()">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <h1>Tweet Map</h1>
-</mat-toolbar>
+<div class="header">
+  <div class="icon">
+    <button *ngIf="idDisplay"  mat-icon-button (click)="handleMenuClick()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
+  <h1><a href="/">Tweet Map</a></h1>
+  <div class="spacer"></div>
+</div>
