--- a/src/app/map/components/tweets/tweets.component.html
+++ b/src/app/map/components/tweets/tweets.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="tweets?.length > 0; else noTweets">
+  <mat-checkbox (change)="handleStreamChackChange($event)">Start Streaming!</mat-checkbox>
   <ul class="tweets">
     <li
       *ngFor="let tweet of tweets"
