チェックボックスに合わせてstream取得開始停止処理を追加

--- a/src/app/map/map.container.html
+++ b/src/app/map/map.container.html
@@ -15,7 +15,11 @@
     [fixedInViewport]="mobileQuery.matches"
     [class.tweet-mobile]="mobileQuery.matches"
   >
-    <app-tweets [tweets]="mapService.tweets" (tweetClick)="handleTweetClick($event)"></app-tweets>
+    <app-tweets
+      [tweets]="mapService.tweets"
+      (streamCheckChange)="handleStreamCheckChange($event)"
+      (tweetClick)="handleTweetClick($event)"
+    ></app-tweets>
   </mat-sidenav>
 
   <mat-sidenav-content class="map-wrapper" [class.map-wrapper-mobile]="mobileQuery.matches">
