--- a/src/app/map/components/tweets/tweets.component.scss
+++ b/src/app/map/components/tweets/tweets.component.scss
@@ -11,6 +11,14 @@
   box-sizing: border-box;
 }
 
+.stream-check {
+  font-size: 14px;
+  padding: 16px;
+  position: sticky;
+  top: 0px;
+  background-color: #eee;
+}
+
 .name {
   margin-top: 0;
   font-size: 14px;
