--- a/src/app/map/map.container.html
+++ b/src/app/map/map.container.html
@@ -17,6 +17,7 @@
   >
     <app-tweets
       [tweets]="mapService.tweets"
+      [isStreamChecked]="isStreamChecked"
       (streamCheckChange)="handleStreamCheckChange($event)"
       (tweetClick)="handleTweetClick($event)"
     ></app-tweets>
