--- a/src/app/map/components/tweets/tweets.component.scss
+++ b/src/app/map/components/tweets/tweets.component.scss
@@ -13,10 +13,13 @@
 
 .stream-check {
   font-size: 14px;
-  padding: 16px;
   position: sticky;
   top: 0px;
   background-color: #eee;
+}
+
+.checkbox {
+  padding: 16px;
 }
 
 .name {
