--- a/src/app/map/map.container.html
+++ b/src/app/map/map.container.html
@@ -18,7 +18,9 @@
     <app-tweets
       [tweets]="mapService.tweets"
       [isStreamChecked]="isStreamChecked"
+      [isLocationOnly]="isLocationOnly"
       (streamCheckChange)="handleStreamCheckChange($event)"
+      (locationOnlyFilterChange)="handleLocationOnlyFilterChange($event)"
       (tweetClick)="handleTweetClick($event)"
     ></app-tweets>
   </mat-sidenav>
